Created a working reset form button.

--- a/main.html
+++ b/main.html
@@ -34,6 +34,7 @@
                     <span id="followers"></span>
                     <span id="following"></span>
                 </div>
+                <button type="reset" id="clearForm" class=" button is-dark" value="clearForm">Reset Form</button>
               </div>
             </div>
           </div>
