Made a verision that doesn't use modal.

--- a/main.html
+++ b/main.html
@@ -12,6 +12,14 @@
 
 <body>
     <main>
+
+        <div class="header">
+          <input type="text" id="username" class="modalMessage input is-info inputField" placeholder="username">
+          <button id="submitModal" class="modalMessage button modalButt" type="submit">Submit</button>
+        </div>
+
+
+      <!--START OF CARD-->
         <div class="card cardForm">
             <div class="card-content">
               <div class="media">
@@ -38,17 +46,7 @@
             </div>
           </div>
     </main>
-        
-    <!-- Below is the modal: -->
-    <div class="overlay hidden">
-        <div class="myModal">
-            <div class="myModal-content">
-                <p class="modalMessage">Please log in to see your user information.</p>
-                <input type="text" id="username" class="modalMessage input is-info inputField" placeholder="username">
-                <button id="submitModal" class="modalMessage button is-dark modalButt" type="submit">Submit</button>
-            </div>
-        </div>
-    </div>
+   <!--END OF CARD-->
 
     <script src="./scripts/main.js"></script>
 </body>
